--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "@blueprintjs/core": "^1.0.1",
-    "antd": "^2.4.3",
-    "backbone": "^1.3.3",
-    "bootstrap-sass": "^3.3.7",
+    "axios": "^0.15.3",
     "font-awesome": "^4.7.0",
     "jquery": "2.2.4",
     "numeral": "^1.5.6",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0"
   }
 }
